# sprkkr2nomad

./: .gitignore  pyproject.toml
examples/Fe_Bsf/: Fe_BSF.inp  Fe_BSF.out
examples/Fe_Dos/: Fe.pot  Fe_DOS.inp  Fe_DOS.out
examples/Fe_Scf/: Fe.pot_new  Fe_SCF.inp  Fe_SCF.out
src/sprkkr2nomad/: ase2sprkkr_to_nomad.py  ase_atoms.py  class_utils.py  input_parameters.py  register.py  sprkkr_parser.py
