[project]
name = "sprkkr2nomad"
version = "0.0.1b"
requires-python = ">= 3.7"
dependencies = [
  "ase",
	'ase2sprkkr>=3.1.1b',
  "asr",
]
authors = [
  { name = "Matyáš Novák", email = "novakmat@fzu.cz" },
]

[project.entry-points.'nomad.plugin']
sprkkr_parser = "sprkkr2nomad.register:sprkkr_parser"
